--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="container-fluid">
         <div class="row gap-5 justify-content-center align-items-center">
 
-            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center">
+            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-1.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
@@ -197,7 +197,7 @@
                 <h2>$8.95</h2>
             </div>
 
-            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center">
+            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
                 <img class="fs-6" width="80%"
                     src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-3.png" alt="">
                 <h3>Magnam Tiste</h3>
@@ -212,7 +212,7 @@
     <div class="container-fluid mt-5">
         <div class="row gap-5 justify-content-center align-items-center">
 
-            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center">
+            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-4.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
@@ -220,7 +220,7 @@
                 <h2>$5.95</h2>
             </div>
 
-            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center">
+            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-5.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
@@ -228,7 +228,7 @@
                 <h2>$8.95</h2>
             </div>
 
-            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center">
+            <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-6.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
