--- a/index.html
+++ b/index.html
@@ -198,10 +198,11 @@
             </div>
 
             <div class="col-lg-3 d-flex flex-column flex-column gap-2 justify-content-center align-items-center class">
-                <img class="fs-6" width="80%"
-                    src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-3.png" alt="">
+                <img width="80%"
+                    src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-3.png" 
+                    alt="">
                 <h3>Magnam Tiste</h3>
-                <p>Lo class="fs-6"rem, deren, trataro, filede, nerada</p>
+                <p>fs-6"rem, deren, trataro, filede, nerada</p>
                 <h2>$14.95</h2>
             </div>
 
@@ -216,7 +217,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-4.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>Lo class="fs-6"rem, deren, trataro, filede, nerada</p>
+                <p>lorem, deren, trataro, filede, nerada</p>
                 <h2>$5.95</h2>
             </div>
 
@@ -224,7 +225,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-5.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>Lo class="fs-6"rem, deren, trataro, filede, nerada</p>
+                <p>lorem, deren, trataro, filede, nerada</p>
                 <h2>$8.95</h2>
             </div>
 
@@ -232,7 +233,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-6.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>Lo class="fs-6"rem, deren, trataro, filede, nerada</p>
+                <p>lorem, deren, trataro, filede, nerada</p>
                 <h2>$12.95 </h2>
             </div>
 
@@ -471,7 +472,7 @@
                         <h4>Address</h4>
                     </div>
                     <h6>A108 Adam Street</h6>
-                    <p class="fs-6">New York, NY 535022 - US</p>
+                    <p lo>New York, NY 535022 - US</p>
                 </div>
                 <div class="col-lg-3 col-sm-5 d-flex flex-column l-icon gap-2">
                     <div class="d-flex main-nav align-items-center gap-2 mt-5">
@@ -479,7 +480,7 @@
                         <h4>Reservations</h4>
                     </div>
                     <h6>Phone: +1 5589 55488 55</h6>
-                    <p class="fs-6">Email: info@example.com</p>
+                    <p lo>Email: info@example.com</p>
                 </div>
                 <div class="col-lg-3 col-sm-5 d-flex flex-column l-icon gap-2">
                     <div class="d-flex main-nav align-items-center gap-2 mt-5">
@@ -487,7 +488,7 @@
                         <h4>Opening Hours</h4>
                     </div>
                     <h6>Mon-Sat: 11AM - 23PM</h6>
-                    <p class="fs-6">Sunday: Closed</p>
+                    <p lo>Sunday: Closed</p>
                 </div>
                 <div class="col-lg-3 col-sm-5 d-flex flex-column l-icon gap-2">
                     <div class="d-flex main-nav align-items-center gap-2 mt-5">
@@ -495,7 +496,7 @@
                         <h4>Follow Us</h4>
                     </div>
                     <h6>A108 Adam Street</h6>
-                    <p class="fs-6">New York, NY 535022 - US</p>
+                    <p lo>New York, NY 535022 - US</p>
                 </div>
             </div>
             <hr class="last-hr">
