--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-3.png" 
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>fs-6"rem, deren, trataro, filede, nerada</p>
+                <p>Lorem, deren, trataro, filede, nerada</p>
                 <h2>$14.95</h2>
             </div>
 
@@ -217,7 +217,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-4.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>lorem, deren, trataro, filede, nerada</p>
+                <p>Lorem, deren, trataro, filede, nerada</p>
                 <h2>$5.95</h2>
             </div>
 
@@ -225,7 +225,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-5.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>lorem, deren, trataro, filede, nerada</p>
+                <p>Lorem, deren, trataro, filede, nerada</p>
                 <h2>$8.95</h2>
             </div>
 
@@ -233,7 +233,7 @@
                 <img width="80%" src="https://bootstrapmade.com/demo/templates/Yummy/assets/img/menu/menu-item-6.png"
                     alt="">
                 <h3>Magnam Tiste</h3>
-                <p>lorem, deren, trataro, filede, nerada</p>
+                <p>Lorem, deren, trataro, filede, nerada</p>
                 <h2>$12.95 </h2>
             </div>
 
